[gd_scene load_steps=6 format=2]

[ext_resource path="res://SpaceshipModule/Gun/TurningTurret/Sprites/turningTurretBackground.png" type="Texture" id=1]
[ext_resource path="res://SpaceshipModule/Gun/TurningTurret/Sprites/turningTurretHead.png" type="Texture" id=2]
[ext_resource path="res://SpaceshipModule/Gun/TurningTurret/TurningTurret.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 30 )

[node name="TurningTurret" type="CollisionShape2D" groups=[
"Gun",
]]
shape = SubResource( 1 )
script = ExtResource( 3 )

[node name="turningTurretBackground" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="turningTurretHead" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="fireTimer" type="Timer" parent="."]
one_shot = true

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
